--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     </section>                        
         <!--About Section End-->
         <!--Service Section-->
-        <section class="service section" id="services"> 
+<section class="service section" id="services"> 
             <div class="container">
                 <div class="row">
                     <div class="section-title padd-15">
@@ -401,7 +401,6 @@
                                     margin: 20px 0; /* Margin around the heading */
                                 }
                             </style>
-                                                     
                             <div class="card-container">
                                 <!-- Award Item 1: Netflix -->
                                 <div class="award-card shadow-dark">
@@ -437,6 +436,42 @@
                                     </div>
                                     <div class="link-container">
                                         <a target="_blank" href="https://www.exploit-db.com/ghdb/8433" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
+                                    </div>
+                                </div>
+                                <!-- Award Item 5: Paytm -->
+                                <div class="award-card shadow-dark">
+                                    <div class="icon-container">
+                                        <img src="./images/paytm.jpeg" alt="Paytm Icon" class="icon" />
+                                    </div>
+                                    <div class="link-container">
+                                        <a target="_blank" href="http://link.com" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
+                                    </div>
+                                </div>
+                                <!-- Award Item 6: XYZ -->
+                                <div class="award-card shadow-dark">
+                                    <div class="icon-container">
+                                        <img src="./images/xyz.jpeg" alt="XYZ Icon" class="icon" />
+                                    </div>
+                                    <div class="link-container">
+                                        <a target="_blank" href="https://rcluex.github.io/jkrathod/" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
+                                    </div>
+                                </div>
+                                <!-- Award Item 7: XYZ -->
+                                <div class="award-card shadow-dark">
+                                    <div class="icon-container">
+                                        <img src="./images/xyz.jpeg" alt="XYZ Icon" class="icon" />
+                                    </div>
+                                    <div class="link-container">
+                                        <a target="_blank" href="https://rcluex.github.io/jkrathod/" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
+                                    </div>
+                                </div>
+                                <!-- Award Item 8: ZYX -->
+                                <div class="award-card shadow-dark">
+                                    <div class="icon-container">
+                                        <img src="./images/xyz.jpeg" alt="ZYX Icon" class="icon" />
+                                    </div>
+                                    <div class="link-container">
+                                        <a target="_blank" href="https://rcluex.github.io/jkrathod/" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
                                     </div>
                                 </div>
                             </div>
@@ -483,9 +518,10 @@
                             text-decoration: underline;
                         }
                     </style>
-            </section>
+                </div>
+            </div>
+        </section>        
         <!--Service Section End-->
-
         <!--Portfolio Section-->
         <section class="portfolio section" id="portfolio">
             <div class="container">
