--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                 <!-- Award Item 5: Paytm -->
                                 <div class="award-card shadow-dark">
                                     <div class="icon-container">
-                                        <img src="./images/paytm.jpeg" alt="Paytm Icon" class="icon" />
+                                        <img src="./images/Paytm.jpeg" alt="Paytm Icon" class="icon" />
                                     </div>
                                     <div class="link-container">
                                         <a target="_blank" href="http://link.com" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
