--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                                         <img src="./images/Paytm.jpeg" alt="Paytm Icon" class="icon" />
                                     </div>
                                     <div class="link-container">
-                                        <a target="_blank" href="http://link.com" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
+                                        <a target="_blank" href="https://drive.google.com/file/d/13_wrWzUkAmMHEaYFFkGCmDSKXYZruA9J/view?usp=drivesdk" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
                                     </div>
                                 </div>
                                 <!-- Award Item 6: XYZ -->
