--- a/index.html
+++ b/index.html
@@ -447,10 +447,10 @@
                                         <a target="_blank" href="https://drive.google.com/file/d/13_wrWzUkAmMHEaYFFkGCmDSKXYZruA9J/view?usp=drivesdk" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
                                     </div>
                                 </div>
-                                <!-- Award Item 6: XYZ -->
+                                <!-- Award Item 6: Jio -->
                                 <div class="award-card shadow-dark">
                                     <div class="icon-container">
-                                        <img src="./images/xyz.jpeg" alt="XYZ Icon" class="icon" />
+                                        <img src="./images/jio.jpeg" alt="Jio Icon" class="icon" />
                                     </div>
                                     <div class="link-container">
                                         <a target="_blank" href="https://rcluex.github.io/jkrathod/" class="link" onmouseover="bleep.play()" onclick="whistle.play()">Hall Of Fame</a>
