--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <section class="home section active" id="home"> 
             <div class="container">
                 <div class="intro">
-                    <img src="./images/gd.png" alt="profile" class="shadow-dark">
+                    <img src="./images/jd.png" alt="profile" class="shadow-dark">
                     <h1>Jagdish Rathod</h1>
                     <p>Cyber Security Researcher</p><br>
                     <p>(RClueX)</p>
